--- a/security/R-jose/Makefile
+++ b/security/R-jose/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2022/12/18 01:44:09 mef Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/11 12:33:46 mef Exp $
 
 R_PKGNAME=	jose
-R_PKGVER=	1.2.0
+R_PKGVER=	1.2.1
 CATEGORIES=	security
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,6 +10,17 @@ LICENSE=	mit	# + file LICENSE
 
 DEPENDS+=	R-openssl>=2.0.5:../../security/R-openssl
 DEPENDS+=	R-jsonlite>=1.8.0:../../textproc/R-jsonlite
+
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+TEST_DEPENDS+=	R-spelling-[0-9]*:../../textproc/R-spelling
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
