--- a/security/R-oskeyring/Makefile
+++ b/security/R-oskeyring/Makefile
@@ -1,12 +1,23 @@
-# $NetBSD: Makefile,v 1.3 2022/12/31 10:42:52 mef Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/11 12:50:46 mef Exp $
 
 R_PKGNAME=	oskeyring
-R_PKGVER=	0.1.5
+R_PKGVER=	0.1.6
 CATEGORIES=	security
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Raw System Credential Store Access from R
 LICENSE=	mit	# + file LICENSE
+
+TEST_DEPENDS+=	R-askpass-[0-9]*:../../security/R-askpass
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+TEST_DEPENDS+=	R-withr-[0-9]*:../../devel/R-withr
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
