--- a/security/R-sodium/Makefile
+++ b/security/R-sodium/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2023/02/19 11:51:05 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/11 12:58:55 mef Exp $
 
 R_PKGNAME=	sodium
-R_PKGVER=	1.2.1
+R_PKGVER=	1.4.0
 CATEGORIES=	security
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,6 +10,12 @@ LICENSE=	mit	# + file LICENSE
 
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
