--- a/time/R-timechange/Makefile
+++ b/time/R-timechange/Makefile
@@ -1,14 +1,25 @@
-# $NetBSD: Makefile,v 1.1 2023/06/05 11:41:20 mef Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/11 13:55:35 mef Exp $
 
 R_PKGNAME=	timechange
-R_PKGVER=	0.2.0
+R_PKGVER=	0.3.0
 CATEGORIES=	time
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Efficient Manipulation of Date-Times
 LICENSE=	gnu-gpl-v3
 
-USE_LANGUAGES=	c c++11
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
+
+USE_LANGUAGES=		c c++
+USE_CXX_FEATURES+=	c++11
 
 .include "../../lang/R-cpp11/buildlink3.mk"
 .include "../../math/R/Makefile.extension"
