--- a/time/R-lubridate/Makefile
+++ b/time/R-lubridate/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2024/01/14 13:34:00 mef Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/11 14:06:01 mef Exp $
 
 R_PKGNAME=	lubridate
-R_PKGVER=	1.9.3
+R_PKGVER=	1.9.4
 CATEGORIES=	time
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,6 +16,13 @@ TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c c++
 
