--- a/textproc/json-c/Makefile
+++ b/textproc/json-c/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.22 2024/08/25 06:19:15 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/11 14:31:24 ryoon Exp $
 
-DISTNAME=	json-c-0.17
+DISTNAME=	json-c-0.18
 CATEGORIES=	textproc
 MASTER_SITES=	https://s3.amazonaws.com/json-c_releases/releases/
 
