--- a/net/nanotodon/Makefile
+++ b/net/nanotodon/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.27 2024/11/14 22:21:13 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2025/01/11 14:43:31 tsutsui Exp $
 
-DISTNAME=	nanotodon-0.4.0
-PKGREVISION=	3
+DISTNAME=	nanotodon-0.5.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=taka-tuos/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
