--- a/devel/py-poetry-core/Makefile
+++ b/devel/py-poetry-core/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2025/01/07 12:36:50 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/11 20:25:14 adam Exp $
 
-DISTNAME=	poetry_core-2.0.0
+DISTNAME=	poetry_core-2.0.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/poetry-core/}
@@ -15,6 +15,7 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-setuptools>=60:../../devel/py-setuptools
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=3.0.0:../../devel/py-test-cov
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-mock>=3.10:../../devel/py-test-mock
 TEST_DEPENDS+=	${PYPKGPREFIX}-tomli_w>=1.0.0:../../textproc/py-tomli_w
+TEST_DEPENDS+=	${PYPKGPREFIX}-trove-classifiers>=2022.5.19:../../misc/py-trove-classifiers
 TEST_DEPENDS+=	${PYPKGPREFIX}-virtualenv>=20.21:../../devel/py-virtualenv
 TEST_DEPENDS+=	git-base-[0-9]*:../../devel/git-base
 
