--- a/misc/p5-Locale-libintl/Makefile
+++ b/misc/p5-Locale-libintl/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.37 2024/11/16 12:06:05 wiz Exp $
+# $NetBSD: Makefile,v 1.38 2025/01/12 09:57:05 wiz Exp $
 
-DISTNAME=	libintl-perl-1.33
+DISTNAME=	libintl-perl-1.34
 PKGNAME=	p5-${DISTNAME:S/libintl-perl/Locale-libintl/}
-PKGREVISION=	2
 CATEGORIES=	misc devel perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Locale/}
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../by-authors/id/G/GU/GUIDO/}
 
 MAINTAINER=	peter.schuller@infidyne.com
 HOMEPAGE=	https://metacpan.org/release/libintl-perl
