--- a/fonts/harfbuzz/Makefile.common
+++ b/fonts/harfbuzz/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.52 2024/11/16 21:33:56 adam Exp $
+# $NetBSD: Makefile.common,v 1.53 2025/01/12 10:18:19 wiz Exp $
 # used by fonts/harfbuzz-icu/Makefile
 
-DISTNAME=	harfbuzz-10.1.0
+DISTNAME=	harfbuzz-10.2.0
 CATEGORIES=	fonts
 MASTER_SITES=	${MASTER_SITE_GITHUB:=harfbuzz/}
 GITHUB_RELEASE=	${PKGVERSION_NOREV}
