--- a/www/R-curl/Makefile
+++ b/www/R-curl/Makefile
@@ -1,14 +1,23 @@
-# $NetBSD: Makefile,v 1.36 2024/12/05 12:51:01 bacon Exp $
+# $NetBSD: Makefile,v 1.37 2025/01/12 10:18:46 mef Exp $
 
 R_PKGNAME=	curl
-R_PKGVER=	6.0.1
+R_PKGVER=	6.1.0
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Modern and flexible web client for R
 LICENSE=	mit
 
-#TEST_DEPENDS+=	R-webutils[0-9]*:../../www/R-webutils
+# Package suggested but not available: 'webutils'
+
+TEST_DEPENDS+=	R-httpuv-[0-9]*:../../www/R-httpuv
+TEST_DEPENDS+=	R-jsonlite-[0-9]*:../../textproc/R-jsonlite
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-later-[0-9]*:../../sysutils/R-later
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+TEST_DEPENDS+=	R-spelling-[0-9]*:../../textproc/R-spelling
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+#TEST_DEPENDS+=	R-webutils-[0-9]*:../../www/R-webutils
 
 USE_LANGUAGES=	c
 USE_TOOLS+=	pkg-config
