--- a/devel/py-ruff/Makefile
+++ b/devel/py-ruff/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.51 2025/01/07 11:55:11 adam Exp $
+# $NetBSD: Makefile,v 1.52 2025/01/12 10:30:06 wiz Exp $
 
-DISTNAME=	ruff-0.8.6
+DISTNAME=	ruff-0.9.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/ruff/}
