--- a/devel/R-fs/Makefile
+++ b/devel/R-fs/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2024/10/18 13:54:56 mef Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/12 12:34:27 mef Exp $
 
 R_PKGNAME=	fs
-R_PKGVER=	1.6.4
+R_PKGVER=	1.6.5
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,17 +11,19 @@ LICENSE=	gnu-gpl-v3
 USE_TOOLS+=	gmake
 USE_LANGUAGES=	c c++
 
-# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
-
-TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
-TEST_DEPENDS+=	R-tibble-[0-9]*:../../math/R-tibble
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
-TEST_DEPENDS+=	R-vctrs-[0-9]*:../../math/R-vctrs
-TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
-TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
 TEST_DEPENDS+=	R-spelling-[0-9]*:../../textproc/R-spelling
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+TEST_DEPENDS+=	R-tibble-[0-9]*:../../math/R-tibble
+TEST_DEPENDS+=	R-vctrs-[0-9]*:../../math/R-vctrs
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 .include "../../math/R/Makefile.extension"
 .include "../../devel/R-Rcpp/buildlink3.mk"
