--- a/textproc/py-types-yaml/Makefile
+++ b/textproc/py-types-yaml/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2024/12/26 14:35:56 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/12 14:40:20 adam Exp $
 
-DISTNAME=	types_pyyaml-6.0.12.20241221
+DISTNAME=	types_pyyaml-6.0.12.20241230
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/:S/py//}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/types-PyYAML/}
