--- a/x11/deskmenu/Makefile
+++ b/x11/deskmenu/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.49 2024/12/27 08:20:52 wiz Exp $
+# $NetBSD: Makefile,v 1.50 2025/01/12 16:17:49 ktnb Exp $
 #
 
-VERSION=	1.4.2
+VERSION=	1.4.5
 DISTNAME=	deskmenu_${VERSION}
 PKGNAME=	deskmenu-${VERSION}
-PKGREVISION=	42
 CATEGORIES=	x11
-#MASTER_SITES=	https://www.oroborus.org/debian/dists/sid/main/source/x11/
+MASTER_SITES=	http://deb.debian.org/debian/pool/main/d/deskmenu/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://web.archive.org/web/20191129172107/https://www.oroborus.org/
