--- a/math/bc/Makefile
+++ b/math/bc/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2024/12/18 16:12:34 nros Exp $
+# $NetBSD: Makefile,v 1.17 2025/01/13 02:22:47 ktnb Exp $
 
-DISTNAME=	bc-1.07.1
+DISTNAME=	bc-1.08.1
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_GNU:=bc/}
 
