--- a/devel/alex/Makefile
+++ b/devel/alex/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2024/05/09 01:31:42 pho Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/13 06:36:27 wiz Exp $
 
-DISTNAME=	alex-3.5.1.0
+DISTNAME=	alex-3.5.2.0
 PKGNAME=	${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	esg@sdf.lonestar.org
