--- a/textproc/py-typogrify/Makefile
+++ b/textproc/py-typogrify/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2022/06/28 11:36:49 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/14 11:52:48 adam Exp $
 
-DISTNAME=	typogrify-2.0.7
+DISTNAME=	typogrify-2.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/typogrify/}
 
@@ -11,13 +10,17 @@ HOMEPAGE=	https://github.com/mintchaos/typogrify
 COMMENT=	Filters to enhance web typography
 LICENSE=	modified-bsd
 
-DEPENDS+=	${PYPKGPREFIX}-smartypants-[0-9]*:../../textproc/py-smartypants
-# tests don't run because of django setup errors, or warnings about the missing two module
-TEST_DEPENDS+=	${PYPKGPREFIX}-jinja2-[0-9]*:../../textproc/py-jinja2
-# django.core.exceptions.ImproperlyConfigured: Requested settings, but settings are not configured. You must either define the environment variable DJANGO_SETTINGS_MODULE or call settings.configure() before accessing settings.
-TEST_DEPENDS+=	${PYPKGPREFIX}-django>=3:../../www/py-django3
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-smartypants>=1.8.3:../../textproc/py-smartypants
+# no tests in the distfile
+#TEST_DEPENDS+=	${PYPKGPREFIX}-invoke>=2.2.0:../../sysutils/py-invoke
+#TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=4.0.0:../../devel/py-test-cov
+#TEST_DEPENDS+=	${PYPKGPREFIX}-test-sugar>=1.0.0:../../devel/py-test-sugar
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+USE_LANGUAGES=	# none
 
-.include "../../lang/python/egg.mk"
+REPLACE_PYTHON+=	typogrify/packages/titlecase/__init__.py
+
+.include "../../lang/python/application.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
