--- a/x11/gtk4/Makefile
+++ b/x11/gtk4/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.55 2024/12/27 08:20:56 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2025/01/14 12:57:17 adam Exp $
 
-DISTNAME=	gtk-4.16.7
+DISTNAME=	gtk-4.16.12
 PKGNAME=	${DISTNAME:S/gtk/gtk4/}
-PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gtk/${PKGVERSION_NOREV:R}/}
 EXTRACT_SUFX=	.tar.xz
