--- a/cad/openscad/Makefile
+++ b/cad/openscad/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.113 2024/12/29 15:09:40 adam Exp $
+# $NetBSD: Makefile,v 1.114 2025/01/14 13:22:36 wiz Exp $
 
 VERSION=	2021.01
 DISTNAME=	openscad-${VERSION}
-PKGREVISION=	34
+PKGREVISION=	35
 CATEGORIES=	cad
 MASTER_SITES=	${MASTER_SITE_GITHUB:=openscad/}
 GITHUB_TAG=	openscad-${VERSION}
