--- a/net/py-smbc/Makefile
+++ b/net/py-smbc/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.29 2024/12/18 10:58:04 nros Exp $
+# $NetBSD: Makefile,v 1.30 2025/01/14 16:46:15 adam Exp $
 
-DISTNAME=	pysmbc-1.0.24
+DISTNAME=	pysmbc-1.0.25.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
-PKGREVISION=	10
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pysmbc/}
 
@@ -11,8 +10,11 @@ HOMEPAGE=	https://github.com/hamano/pysmbc
 COMMENT=	Python bindings for libsmbclient
 LICENSE=	gnu-gpl-v2
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+#TEST_DEPENDS+=	${PYPKGPREFIX}-nose-[0-9]*:../../devel/py-nose
+
 USE_TOOLS+=	pkg-config
 
 .include "../../net/samba4/buildlink3.mk"
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
